# Wayback-Export-Toolkit

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
downloads/www.paulgraham.com_20140208014753/: manifest.json
src/wayback_export/: __init__.py  analysis.py  cli.py  discovery.py  download.py  gui.py  http_client.py  mirror.py  models.py  output.py  selection.py  wayback.py
tests/: test_analysis_crawl.py  test_analysis_download.py  test_cli.py  test_discovery.py  test_gui.py  test_http_client.py  test_mirror.py  test_wayback.py
tests/fixtures/: sample_snapshot.html
