[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wayback-export-toolkit"
version = "0.1.0"
description = "Analyze a Wayback snapshot for export-like files and download selected artifacts."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Wayback Export Downloader Contributors" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]
ui = ["rich>=13.0"]

[project.scripts]
wayback-export = "wayback_export.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
